se creo el template

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primer proyecto django | </title>
+    <title>Primer proyecto django |{{titulo}} </title>
 </head>
 <body>
-    <h1>Hola mundo este es mi primer template en django</h1>
+    <h1>¡Hola mundo {{nombre}} ! este es mi primer template en django</h1>
     
 </body>
 </html>
