--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -13,10 +13,9 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <svg class="bd-placeholder-img" width="100%" height="100%" src="{% static '' %}}
+                <img class="bd-placeholder-img" width="100%" height="100%" src="{% static 'img/puente-madera.jpg' %}"
                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <rect width="100%" height="100%" fill="#777"></rect>
-                </svg>
+                </img>
                 <div class="container">
                     <div class="carousel-caption text-start">
                         <h1>Ejemplo de encabezado.</h1>
@@ -29,10 +28,9 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+                <img class="bd-placeholder-img" width="100%" height="100%" src="{% static 'img/chica-rodeada-peces-mar.jpg' %}"
                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <rect width="100%" height="100%" fill="#777"></rect>
-                </svg>
+                </img>
                 <div class="container">
                     <div class="carousel-caption">
                         <h1>Otro titular de ejemplo.</h1>
@@ -47,10 +45,9 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
+                <img class="bd-placeholder-img" width="100%" height="100%" src="{% static 'img/camping.jpg' %}"
                     aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                    <rect width="100%" height="100%" fill="#777"></rect>
-                </svg>
+                </img>
                 <div class="container">
                     <div class="carousel-caption text-end">
                         <h1>Uno más por si acaso.</h1>
@@ -78,13 +75,11 @@
     <div class="container marketing">
         <div class="row">
             <div class="col-lg-4">
-                <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+                <img class="bd-placeholder-img rounded-circle" width="140" height="140"
+                src="{% static 'img/familia1.jpg' %}" role="img" aria-label="Placeholder: 140x140"
                     preserveAspectRatio="xMidYMid slice" focusable="false">
                     <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#777"></rect>
-                    <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-                </svg>
+                </img>
                 <h2>Encabezado</h2>
                 <p>
                     Algo de contenidoplaceholder representativo para las tres columnas de
@@ -93,13 +88,11 @@
                 <p><a class="btn btn-secondary" href="#">Ver detalles »</a></p>
             </div>
             <div class="col-lg-4">
-                <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
+                <img class="bd-placeholder-img rounded-circle" width="140" height="140"
+                src="{% static 'img/pareja.jpg' %}" role="img" aria-label="Placeholder: 140x140"
                     preserveAspectRatio="xMidYMid slice" focusable="false">
                     <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#777"></rect>
-                    <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-                </svg>
+                </img>
                 <h2>Encabezado</h2>
                 <p>
                     Otro fragmento emocionante de contenidoplaceholder representativo.
@@ -108,13 +101,11 @@
                 <p><a class="btn btn-secondary" href="#">Ver detalles »</a></p>
             </div>
             <div class="col-lg-4">
-                <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-                    xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140"
-                    preserveAspectRatio="xMidYMid slice" focusable="false">
+                <img class="bd-placeholder-img rounded-circle" width="140" height="140"
+                src="{% static 'img/venecia.jpg' %}"role="img" aria-label="Placeholder: 140x140"
+                    preserveAspectRatiottp="xMidYMid slice" focusable="false">
                     <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#777"></rect>
-                    <text x="50%" y="50%" fill="#777" dy=".3em">140x140</text>
-                </svg>
+                </img>
                 <h2>Encabezado</h2>
                 <p>
                     Y, por último, esta, la tercera columna de contenidoplaceholder
@@ -138,11 +129,9 @@
             </div>
             <div class="col-md-5">
                 <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                    height="500" src="{% static 'img/Paris.jpg' %} role="img" aria-label="Placeholder: 500x500"
+                    height="500" src="{% static 'img/Paris.jpg' %}" role="img" aria-label="Placeholder: 500x500"
                     preserveAspectRatio="xMidYMid slice" focusable="false">
                     <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"></rect>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
                 </img>
             </div>
         </div>
@@ -159,13 +148,11 @@
                 </p>
             </div>
             <div class="col-md-5 order-md-1">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                    height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+                    height="500" src="{% static 'img/camping.jpg' %}" role="img" aria-label="Placeholder: 500x500"
                     preserveAspectRatio="xMidYMid slice" focusable="false">
                     <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"></rect>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-                </svg>
+                </img>
             </div>
         </div>
         <hr class="featurette-divider" />
@@ -182,13 +169,11 @@
                 </p>
             </div>
             <div class="col-md-5">
-                <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
-                    height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500"
+                <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500"
+                    height="500" src="{% static 'img/mujer-caminando.jpg' %}" role="img" aria-label="Placeholder: 500x500"
                     preserveAspectRatio="xMidYMid slice" focusable="false">
                     <title>Placeholder</title>
-                    <rect width="100%" height="100%" fill="#eee"></rect>
-                    <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text>
-                </svg>
+                </img>
             </div>
         </div>
         <hr class="featurette-divider" />
